[gd_scene load_steps=4 format=3 uid="uid://by330gabxuaeu"]

[ext_resource type="Script" path="res://Scripts/MenuPersonaje/Notas/MenuNotas.gd" id="1_y3j2v"]

[sub_resource type="Theme" id="Theme_gcger"]
default_font_size = 25
BoxContainer/constants/separation = 4
GridContainer/constants/h_separation = 4
GridContainer/constants/v_separation = 20
HBoxContainer/constants/separation = 6
Label/font_sizes/font_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_scc2i"]
draw_center = false
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.686275, 0.686275, 0.686275, 1)

[node name="MenuPersonaje" type="Control" node_paths=PackedStringArray("nTitulo", "nFecha", "nContenido", "nAccept", "contNotas")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = SubResource("Theme_gcger")
script = ExtResource("1_y3j2v")
nTitulo = NodePath("MarginContainer/VBoxContainer/Notas/ContNota/Titulo/Titulo")
nFecha = NodePath("MarginContainer/VBoxContainer/Notas/ContNota/ContFecha/Fecha")
nContenido = NodePath("MarginContainer/VBoxContainer/Notas/ContNota/Contenido")
nAccept = NodePath("ConfirmationDialog")
contNotas = NodePath("MarginContainer/VBoxContainer/Notas/PanelContainer/ScrollContainer/ContNotas")

[node name="GuardarValores" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BG" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -362.0
offset_top = -642.0
offset_right = 362.0
offset_bottom = 640.0
color = Color(0, 0.00392157, 0.0509804, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = -358.0
offset_top = -640.0
offset_right = 358.0
offset_bottom = 638.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CabezaTitulo" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_scc2i")

[node name="ContTitulo" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CabezaTitulo"]
layout_mode = 2
alignment = 1

[node name="Titulo" type="Label" parent="MarginContainer/VBoxContainer/CabezaTitulo/ContTitulo"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Notas"
horizontal_alignment = 1

[node name="Notas" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 700)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/Notas"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Notas/PanelContainer"]
layout_mode = 2

[node name="ContNotas" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Notas/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ContNota" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Notas"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Titulo" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Notas/ContNota"]
layout_mode = 2

[node name="LTitulo" type="Label" parent="MarginContainer/VBoxContainer/Notas/ContNota/Titulo"]
layout_mode = 2
text = "Titulo:"

[node name="Titulo" type="LineEdit" parent="MarginContainer/VBoxContainer/Notas/ContNota/Titulo"]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="ContFecha" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Notas/ContNota"]
layout_mode = 2

[node name="LFecha" type="Label" parent="MarginContainer/VBoxContainer/Notas/ContNota/ContFecha"]
layout_mode = 2
text = "Fecha:"

[node name="Fecha" type="LineEdit" parent="MarginContainer/VBoxContainer/Notas/ContNota/ContFecha"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
editable = false

[node name="LContenido" type="Label" parent="MarginContainer/VBoxContainer/Notas/ContNota"]
layout_mode = 2
text = "Contenido:"

[node name="Contenido" type="TextEdit" parent="MarginContainer/VBoxContainer/Notas/ContNota"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
editable = false
context_menu_enabled = false
selecting_enabled = false
virtual_keyboard_enabled = false
wrap_mode = 1

[node name="Botones" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CrearNota" type="Button" parent="MarginContainer/VBoxContainer/Botones"]
custom_minimum_size = Vector2(150, 80)
layout_mode = 2
size_flags_horizontal = 0
text = "Crear Nota"

[node name="BorrarNota" type="Button" parent="MarginContainer/VBoxContainer/Botones"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
text = "Borrar Nota"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
text = "Volver"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Seguro?"
initial_position = 1
dialog_text = "Seguro que desea eliminar esta nota?"
cancel_button_text = "Cancelar"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Botones/CrearNota" to="." method="_on_crear_nota_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Botones/BorrarNota" to="." method="_on_borrar_nota_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
